--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>ros2_parameters</name>
   <version>0.0.0</version>
-  <description>Assignment: ROS2 Parameters</description>
-  <maintainer email="student@university.edu">Student Name</maintainer>
-  <license>Apache-2.0</license>
+  <description>ROS2 parameters assignment</description>
+
+  <maintainer email="your_email@example.com">Your Name</maintainer>
+  <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <!-- TODO: Add dependency for rclcpp -->
+  <depend>rclcpp</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
